--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "jwt-decode": "^4.0.0",
     "mammoth": "^1.11.0",
+    "mermaid": "^11.12.1",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-doc-viewer": "^0.1.15",
     "react-dom": "^19.1.1",
     "react-file-viewer": "^1.2.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
